# esp-aws-ota-comparison

./: .gitignore  .gitmodules  README.md  logs.md
aws-iot/: README.md  cdk.json  package-lock.json
aws-iot/lib/: ota-stack.ts
aws-iot/scripts/: _lib.sh  enable-fleet-indexing.sh  fleet-query.sh  make-codesign-cert.sh  push-ota.sh  push-update.sh  register-device.sh  sign-and-publish.sh  upload-firmware.sh  watch.sh
esp/: .gitignore  CMakeLists.txt  README.md  app_to_ota0.py  embed_certs.cmake  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.https  sdkconfig.manual  select_backend.py
esp/scripts/: _partlib.sh  build-fixture.sh  flash-full.sh  flash-main-app.sh  provision-secure-cert.sh
esp/src/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_main.c  device_iot.c  device_iot.h  idf_component.yml  led.c  led.h  mqtt_client.c  mqtt_client.h  ota_backend.h  ota_download.c  ota_download.h  ota_jobs_common.c  ota_jobs_common.h  ota_orchestrator.c  ota_orchestrator.h  secrets.h.example  self_test.c  self_test.h  transport.h  wifi.c  wifi.h
esp/src/certs/: aws_codesign.crt  client.crt  client.key
esp/src/orchestrators/: ota_filestreams.c  ota_http.c  ota_jobs.c  ota_manual.c
esp/src/transports/: transport_coremqtt.c  transport_espmqtt.c
factory/: .gitignore  CMakeLists.txt  README.md  RECOVERY.md  partitions.csv  platformio.ini  sdkconfig.defaults
factory/src/: CMakeLists.txt  main.c
jobs-aws-iot/: .gitignore  README.md  cdk.json  package.json
jobs-aws-iot/lib/: ota-stack.ts
jobs-aws-iot/scripts/: _lib.sh  create-job.sh  presign-and-upload.sh  watch-job.sh
jobs-esp/: CMakeLists.txt  README.md  embed_certs.cmake  platformio.ini
jobs-esp/scripts/: build-fixture.sh
jobs-esp/src/: CMakeLists.txt  app_config.h  app_main.c  idf_component.yml  jobs_orchestrator.c  jobs_orchestrator.h
manual-aws-iot/: README.md  node_modules  tsconfig.json
manual-aws-iot/lib/: ota-stack.ts
manual-aws-iot/scripts/: _lib.sh  presign-and-upload.sh  publish-plan.sh  watch-confirm.sh
manual-esp/: CMakeLists.txt  README.md  sdkconfig.defaults
manual-esp/src/: CMakeLists.txt  app_main.c  control_protocol.c  control_protocol.h  mqtt_es.c  mqtt_es.h  self_test.c  self_test.h  wifi.c  wifi.h
master-certs/: README.md
